fixing hex spacing

--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@ html {
 
 .theHex {
   width: 500px;
-  margin-left: 110px;
+  margin-left: 67px;
   vertical-align: top;
 }
 
